# numerical-approximation-intervals

./: CMakeLists.txt  README.md  approx.h  interval.h  main.cpp  newton.h
stare/: Cwiczenia_zadania.sln  Cwiczenia_zadania.vcxproj  Cwiczenia_zadania.vcxproj.filters  UpgradeLog.htm  config.h  cwiczenia1_415907.cpp  cwiczenia1_415907.h  cwiczenia2_415907.cpp  wyniki_zad3.csv
test/: approx_test.cpp  approx_test.h  interval_test.cpp  interval_test.h  newton_test.cpp  newton_test.h
x64/Debug/: Cwiczenia_zadania.exe.recipe  Cwiczenia_zadania.ilk  Cwiczenia_zadania.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Cwiczeni.b8caf040.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Cwiczenia_zadania.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
